@@ -985,7 +985,8 @@ int procrc(CAP *cap, unsigned char *name)
 		case '{':	/* Ignore help text */
 			{
 				while ((fgets((char *)buf, 256, fd)) && (buf[0] != '}'))
-					/* do nothing */;
+					++line;
+				++line;
 				if (buf[0] != '}') {
 					err = 1;
 					fprintf(stderr, "\n%s %d: End of joerc file occured before end of help text\n", name, line);
@@ -1097,6 +1098,7 @@ int procrc(CAP *cap, unsigned char *name)
 					break;
 				} else if (x == -2) {
 					fgets((char *)buf, 1024, fd);
+					++line;
 					goto macroloop;
 				}
 				if (!m)
